corrects styling for gapstat search columns

--- a/src/index.css
+++ b/src/index.css
@@ -253,7 +253,7 @@ h3 {
   padding-bottom: 100px;
   padding-left: 20px;
   display: grid;
-  grid-template-columns: 1fr 200px 150px 1.5fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   grid-column-gap: 55px;
 }
@@ -266,12 +266,21 @@ h3 {
 
 #gapStatList {
   cursor: pointer;
+  margin-bottom: 20px;
 }
 
 .gapShow {
   color: bisque;
   display: grid;
-  grid-template-columns: 1.2fr .8fr;
+  grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: auto;
-  grid-column-gap: 5px;
+  grid-column-gap: 55px;
+}
+
+.currentShow {
+  padding-left: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-column-gap: 55px;
 }
